--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,6 @@ language: python
 
 sudo: false
 
-python:
-  - 2.7
-  - 3.6
-  - 3.7
-
 cache:
   directories:
     - $HOME/.cache/pip
@@ -25,7 +20,7 @@ matrix:
     before_install:
     - pip install numpy==1.14.3
     - pip install scipy==1.1.0
-    - pip install matplotlib==1.4.2
+    - pip install matplotlib==2.2.2
   - name: "Python 3.7"
     python: 3.7
     before_install:
@@ -40,4 +35,4 @@ install:
 - pip install .
 
 script:
-- python runtests.py
+- python -m pytest .
